# shin-roulette

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  docker-compose.yml  pylintrc  pyproject.toml
shin_roulette/: constants.py  discord_bot.py  main.py
shin_roulette/cogs/: about.py  roulette.py  roulette_again.py  sync.py
shin_roulette/core/: base.py  extensions_loader.py  fights.py  init_logging.py  jobs.py  roulette_runner.py  shin_roulette.py
shin_roulette/extensions/: roulette.py  sync.py
